<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LandingActivity">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/app_logo_description"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Tagline Text -->
    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tagline_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <!-- Get Started Button -->
    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="238dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_get_started_background"
        android:text="@string/get_started_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTagline" />

</androidx.constraintlayout.widget.ConstraintLayout>

